
08/10/18: Added the first files for the single page app, the Face to Face algorithm showcase.
          Includes explanations for algorithms A and B.
          No support yet to change between them on the visual display.

08/12/18: ICL Reader Version 20
          Changed function array to function object.
          Now input requires the use the actual function names.
          Added a pursue function for wireless.(works, but not completely)
          Save Buffer added.
          Exit interrupt added.
          Changed square buttons to words.
          Added slow button, slows forwards or backwards.
          Reduced some visual loading code.
          Circle is now considered a polygon with 360 sides.
          Line still breaks, for now.
          Added Vertex room, does nothing.
          Loads twice for debugging.
          Re-arranged UI.

08/13/18: ICL Reader Version 21
          Pursue function now pursues closest.
          Pursue function now claims target; prevents same target.
          Pursue function has caught target, if within half a frame of movement.
          Exit found, if within half a frame of movement.

08/13/18: F2F showcase uses ICL Reader Version 21 framework.
          Explanation for algorithm C added.
          Explanation for triangular detour added.
          Added more responsive design to the F2Fshowcase.
          TODO: ChoosExit slightly malfunctions now that the SVG is centered
          @@@@ Dave if you read this please look at f2fshowcase.js @@@@

08/14/18: F2F Showcase Visual/QOL updates -
          Links to algorithms focus on the description when clicked.
          More responsive design added.
          Updated animation controllers to look more natural.

          TODO: Animation slider crashes when clicked BEFORE animation starts.
          TODO: Bot selector crashes when clicked before animation starts.

08/16/18: ICL Reader V22
          Intercept implemented
          Hovering over bot, shows its instructions