@@ -4,6 +4,7 @@
  <head>
    <meta charset = "utf-8">
    <script src = "https://d3js.org/d3.v5.min.js"></script>
+   <link rel='stylesheet' type='text/css' href='ICLfashion.css' />
    <!--<script src = "d3.min.js"></script>-->
  </head>
  <body>
